510-d9stbot-manifests/d9stbot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: d9stbot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: d9stbot
  template:
    metadata:
      labels:
        app: d9stbot
    spec:
      containers:
        - name: d9stbot
          image: tuana9a/d9stbot:git-0c2387f5
          command: ["node", "main.js"]
---
apiVersion: v1
kind: Service
metadata:
  name: d9stbot
spec:
  selector:
    app: d9stbot
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: d9stbot
spec:
  parentRefs:
    - kind: ListenerSet
      name: d9stbot
  hostnames:
    - d9stbot.tuana9a.com
  rules:
    - backendRefs:
        - kind: Service
          name: d9stbot
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
