510-d9stbot-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: d9stbot
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    external-dns.alpha.kubernetes.io/hostname: "d9stbot.tuana9a.com"
    external-dns.alpha.kubernetes.io/target: "xenomorph.tuana9a.com"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - d9stbot.tuana9a.com
      secretName: d9stbot-tuana9a-com-tls
  rules:
    - host: d9stbot.tuana9a.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: d9stbot
                port:
                  number: 8080
